Added an 'Add Bill' screen which user can use to *gasp* add a bill.  Did some refactoring of main.py to allow easy and smooth transitions between screens now that there are multiple.  Only essential functionality left is the edit screen to allow editing / deletion of existing bills

--- a/budget.kv
+++ b/budget.kv
@@ -13,6 +13,7 @@
     titleLabel:titleLabel
     amountInput:amountInput
     saveButton:saveButton
+    addBillButton:addBillButton
     orientation: 'horizontal'
 
     Label:
@@ -27,7 +28,7 @@
 
     MoneyInput:
         id:amountInput
-        text: '1000.00'
+        text: ''
         multiline: False
         size_hint: 2/7,0.35
         pos_hint:{'x':0.5,'center_y':0.5}
@@ -35,8 +36,13 @@
     Button:
         id: saveButton
         text: 'Save Changes'
-        size_hint: 2/7,0.35
-        center_y:self.center_y
+        size_hint: 1/7,0.35
+        pos_hint:{'x':0.5,'center_y':0.5}
+
+    Button:
+        id: addBillButton
+        text: 'Add New Bill'
+        size_hint: 1/7, 0.35
         pos_hint:{'x':0.5,'center_y':0.5}
 
 <SideBar>:
